<resources>
    <string name="app_name">AntiSplit M</string>
    <string name="oldAndroidInfo">Note: Your version of Android is too old to use the file picker. You have to input the location of the file manually. The files will be saved to Download folder in the internal storage.</string>
    <string name="working_file">Working file</string>
    <string name="merge">Select split APK to Merge/AntiSplit</string>
    <string name="success_saved">File saved successfully</string>
    <string name="enable_logs">Enable logs</string>
    <string name="ask">Ask where to save the file each time (if disabled, write the AntiSplitted APK to the same directory where the split file was from)</string>
    <string name="grant_storage">Storage permission is required to save to the same dir as the selected file</string>
    <string name="no_filepath">Could not find the filepath of the selected file</string>
    <string name="output">Output directory:</string>
    <string name="show_dialog">Show dialog allowing selection of which splits to include</string>
</resources>